# atividades-mcti

cdd/: pyproject.toml  tabela_horarios.ipynb
cdd/.ipynb_checkpoints/: problema_VIP-checkpoint.ipynb
cdd/Aula 01/: tabela_horarios.ipynb
cdd/Aula 02/.ipynb_checkpoints/: Atividade 02-checkpoint.md
cdd/Aula 03/: Oficina03.ipynb
cdd/Aula 03/.ipynb_checkpoints/: mushrooms-checkpoint.ipynb
cdd/Aula 04/: Aula04.ipynb
